force-app/main/default/objects/Reference_Application__c/Reference_Application__c.object-meta.xml
<CustomObject>
    <label>Reference Application</label>
    <nameField>
        <label>Reference Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>