force-app/main/default/objects/Reference_Application__c/fields/Created_Date_Label__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Label__c</fullName>
    <defaultValue>&apos;Created Date&apos;</defaultValue>
    <label>Created Date Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>