force-app/main/default/objects/Reference_Application__c/fields/On_Submit_Display_Message__c.field-meta.xml
<CustomField>
    <fullName>On_Submit_Display_Message__c</fullName>
    <label>On Submit Display Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>