force-app/main/default/objects/Reference_Application__c/fields/Save_Label__c.field-meta.xml
<CustomField>
    <fullName>Save_Label__c</fullName>
    <defaultValue>&apos;Save&apos;</defaultValue>
    <label>Save Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>