force-app/main/default/objects/Reference_Application__c/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <defaultValue>&apos;Status&apos;</defaultValue>
    <label>Status Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>